fix issues with jumping to song

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,6 +2,7 @@ body {
     margin: auto;
     height: auto;
     width: auto;
+    overflow-x: hidden;
 }
 
 #navbar {
@@ -313,7 +314,6 @@ a:link {
 }
 
 .book-songs-window {
-    /* position: fixed; */
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-auto-rows: auto;
@@ -323,13 +323,12 @@ a:link {
     width: 100%;
     height: 100%;
     z-index: 99;
-    background-color: black;
+    background-color: rgb(50, 99, 150);
     overflow-y: scroll;
     visibility: hidden;
 }
 
 .book-songs-window-visible {
-    /* position: fixed; */
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-auto-rows: auto;
@@ -339,7 +338,7 @@ a:link {
     width: 100%;
     height: 100%;
     z-index: 99;
-    background-color: black;
+    background-color: rgb(50, 99, 150);
     overflow-y: scroll;
     visibility: visible;
 }
@@ -690,6 +689,15 @@ a:link {
 #current-filter-div {
     display: flex;
     justify-content: center;
+}
+
+.play-song-button {
+    background-color: rgb(120, 188, 255);
+    border-radius: 3px;
+    border: none;
+    cursor: pointer;
+    padding: 1% 2% 1% 2%;
+    margin-top: 5%;
 }
 
 
